Align Objects Axis button is not redraw #39000

Closed
opened 2014-03-06 20:45:05 +01:00 by Cenek Strichel · 14 comments

System Information
W8.1, 64b

Blender Version
19f7f9a

Exact steps for others to reproduce the error

  1. select two objects and Object > Transform > Align Objects
  2. Press F6 for floating panel and change align axis.

Axis is not redraw until mouse is over button.

**System Information** W8.1, 64b **Blender Version** 19f7f9a **Exact steps for others to reproduce the error** 1) select two objects and Object > Transform > Align Objects 2) Press F6 for floating panel and change align axis. Axis is not redraw until mouse is over button.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Cenda

Added subscriber: @Cenda

#38952 was marked as duplicate of this issue

#38952 was marked as duplicate of this issue

Added subscriber: @mont29

Added subscriber: @mont29

Added subscribers: @ideasman42, @brecht

Added subscribers: @ideasman42, @brecht

Issue confirmed, but iirc it’s a current limitation of how our popups work? Not sure though…

Issue confirmed, but iirc it’s a current limitation of how our popups work? Not sure though…

The buttons in a popup are indeed not redrawn as in calling the draw() callback to recreate the buttons, but it used to run ui_check_but on other buttons in the popup to refresh them, maybe that code got lost or is not called somehow.

The buttons in a popup are indeed not redrawn as in calling the `draw()` callback to recreate the buttons, but it used to run `ui_check_but` on other buttons in the popup to refresh them, maybe that code got lost or is not called somehow.
Bastien Montagne self-assigned this 2014-03-06 21:28:36 +01:00

Oki, will have a look at it then, thanks for the hint :)

Oki, will have a look at it then, thanks for the hint :)

This issue was referenced by blender/blender-addons-contrib@571f184d35

This issue was referenced by blender/blender-addons-contrib@571f184d35e1f68d7df271196c2a895511fdd5b9

This issue was referenced by 571f184d35

This issue was referenced by 571f184d35e1f68d7df271196c2a895511fdd5b9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 571f184d35.

Closed by commit 571f184d35.

Added subscriber: @Sergey

Added subscriber: @Sergey

◀ Merged tasks: #38952.

◀ Merged tasks: #38952.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39000
No description provided.