Fix T39000: Align Objects Axis button is not redraw.

We have to apply button *before* checking others in the ROW, else changes are not propagated to them yet.